apps/music/navidrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: media
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
      app.kubernetes.io/instance: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
        app.kubernetes.io/instance: navidrome
      annotations:
        iscsi.stevevaradi.me/eio-remediate: "true"
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: navidrome
          # renovate: datasource=docker depName=deluan/navidrome
          image: docker.io/deluan/navidrome:0.64.2
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: data
              mountPath: /data
            - name: media
              mountPath: /nfs_media
          resources:
            requests:
              cpu: 10m
              memory: 80Mi
            limits:
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: media
          nfs:
            server: 192.168.0.151
            path: /export/media
