apps/music/navidrome-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: media
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4533
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
