apps/music/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Navidrome"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "navidrome.png"
    gethomepage.dev/description: "Music"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-navidrome
  hostnames:
    - navidrome.stevevaradi.me
  rules:
    - backendRefs:
        - name: navidrome
          port: 4533
